fixed header and ticker gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,8 @@ p {
 .header {
   padding: 10px 20px;
   position: sticky;
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
   top: 0;
   z-index: 1000;
   width: 100%;
